--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,3 +1,16 @@
+.navbar-container {
+  padding: 15px !important;
+  letter-spacing: 5px;
+}
+
 .navbar-links-container {
   justify-content: space-between;
+}
+
+.nav-link:hover {
+  color: #1abc9c !important;
+}
+
+.nav-brand {
+  color: #777 !important;
 }
