--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,15 +1,14 @@
 .footer-container {
+  display: flex;
   position: absolute;
   text-align: center;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
-  height: 60px;
+  height: 80px;
   background-color: #1abc9c;
-  margin: 0;
 }
 
 .footer-container p {
-  margin-top: 25px;
   font-size: 12px;
   color: #fff;
 }
